# synq

./: .gitignore  Cargo.toml  README.md  architecture.md
.github/workflows/: build-synq.yml
crates/synq-app/: package-lock.json  package.json
crates/synq-app/src/: App.css  App.tsx
crates/synq-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/synq-app/src-tauri/src/: lib.rs  main.rs
crates/synq-clipboard/: Cargo.toml
crates/synq-clipboard/src/: crdt.rs  lib.rs  observer.rs  schema.rs
crates/synq-core/: Cargo.toml
crates/synq-core/src/: config.rs  error.rs  lib.rs  protocol.rs  types.rs
crates/synq-focus/: Cargo.toml
crates/synq-focus/src/: buffer.rs  edge.rs  lib.rs  warp.rs
crates/synq-input/: Cargo.toml
crates/synq-input/src/: killswitch.rs  lib.rs  macos.rs  windows_impl.rs
crates/synq-net/: Cargo.toml
crates/synq-net/src/: discovery.rs  lib.rs  noise.rs  reconnect.rs  signaling.rs  transport.rs
