[workspace]
members = [
    "crates/synq-core",
    "crates/synq-input",
    "crates/synq-clipboard",
    "crates/synq-net",
    "crates/synq-focus",
    "crates/synq-app/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hydratik"]
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
bytes = "1"
blake3 = "1"

# Internal crates
synq-core = { path = "crates/synq-core" }
synq-input = { path = "crates/synq-input" }
synq-clipboard = { path = "crates/synq-clipboard" }
synq-net = { path = "crates/synq-net" }
synq-focus = { path = "crates/synq-focus" }
