[package]
name = "synq-clipboard"
description = "CRDT-based clipboard synchronization engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
synq-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }

# Clipboard access
arboard = "3"

# CRDT
automerge = "0.5"
