[package]
name = "synq-net"
description = "Networking layer — WebRTC DataChannels, mDNS discovery, Noise Protocol E2EE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "verify-net"
path = "src/bin/verify_net.rs"

[dependencies]
synq-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
whoami = "1.5"
tracing-subscriber = { workspace = true }

# Noise Protocol for E2EE
snow = "0.9"

# mDNS for LAN discovery
mdns-sd = "0.11"

# WebRTC
webrtc = "0.12"
